Centered modal dialog

--- a/Pages/ModalDialog.razor
+++ b/Pages/ModalDialog.razor
@@ -4,7 +4,7 @@
 {
     // base for modal dialog from: https://gist.github.com/conficient/ba98d1662c659e170ec16650acea05c8
 <div class="modal fade show" style="display:block; background-color: rgba(10,10,10,.8);" aria-modal="true" role="dialog" @onclick="@ModalCancel">
-    <div class="modal-dialog" @onclick:stopPropagation="true">
+    <div class="modal-dialog modal-dialog-centered" @onclick:stopPropagation="true">
         <div class="modal-content">
 
             <!-- Modal Header -->
