Changes on styles to use base from bootstrap and improve look

--- a/Pages/Forecast.razor
+++ b/Pages/Forecast.razor
@@ -6,7 +6,7 @@
 @if (forecast != null)
 {
     <div class="card-body">
-        <div class="forecast-grid">
+        <div class="table">
             <div>@forecast.Date.ToShortDateString()</div>
             <div>@forecast.TemperatureC</div>
             <div>@forecast.TemperatureF</div>
