--- a/Pages/Index.razor
+++ b/Pages/Index.razor
@@ -8,7 +8,7 @@
 <p>This component demonstrates fetching data from a service and showing on virtualized table.</p>
 
 <div class="virtWrapper">
-    <table class="table">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Date</th>
