--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -12,6 +12,18 @@
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
         </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/sorting" Match="NavLinkMatch.All">
+                <span class="oi oi-sort-ascending" aria-hidden="true"></span> Sorting
+            </NavLink>
+        </li>
+
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/filtering" Match="NavLinkMatch.All">
+                <span class="oi oi-key" aria-hidden="true"></span> Filtering
+            </NavLink>
+        </li>
     </ul>
 </div>
 
